@@ -3,7 +3,6 @@ package org.csanchez.jenkins.plugins.kubernetes.pod.decorator;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Extension;
 import io.fabric8.kubernetes.api.model.Pod;
-import org.apache.commons.lang.StringUtils;
 import org.csanchez.jenkins.plugins.kubernetes.KubernetesCloud;
 
 /**
@@ -14,7 +13,8 @@ public class DefaultRestartPolicy implements PodDecorator {
     @NonNull
     @Override
     public Pod decorate(@NonNull KubernetesCloud kubernetesCloud, @NonNull Pod pod) {
-        if (StringUtils.isBlank(pod.getSpec().getRestartPolicy())) {
+        String restartPolicy = pod.getSpec().getRestartPolicy();
+        if (restartPolicy == null || restartPolicy.isBlank()) {
             pod.getSpec().setRestartPolicy("Never");
         }
         return pod;
